tests/models/enum/unnamed/u128/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        u128
    ),
}
fn main() {}
