tests/models/enum/unnamed/u128/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        u128
    ),
}
fn main() {}
